syntax = "proto3";

option go_package = "github.com/HaCaK/pse-bee-gobooking/src/property/proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package gen;

service PropertyExternal {
  rpc CreateProperty(CreatePropertyReq) returns (PropertyResp) {
    option (google.api.http) = {
      post: "/properties",
      body: "*"
    };
  }
  rpc UpdateProperty(UpdatePropertyReq) returns (PropertyResp) {
    option (google.api.http) = {
      put: "/properties/{id}",
      body: "*"
    };
  }
  rpc GetProperty(PropertyIdReq) returns (PropertyResp) {
    option (google.api.http) = {
      get: "/properties/{id}"
    };
  }
  rpc GetProperties(google.protobuf.Empty) returns (ListPropertiesResp) {
    option (google.api.http) = {
      get: "/properties"
    };
  }
  rpc DeleteProperty(PropertyIdReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/properties/{id}"
    };
  }
}

message CreatePropertyReq {
  string name = 1;
  string description = 2;
  string owner_name = 3;
  string address = 4;
}

message UpdatePropertyReq {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string owner_name = 4;
  string address = 5;
}

message PropertyIdReq {
  uint32 id = 1;
}

message ListPropertiesResp {
  repeated PropertyResp properties = 1;
}

message PropertyResp {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string owner_name = 4;
  string status = 5;
  uint32 booking_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}